--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxt/scripts": "^0.9.5",
     "@nuxtjs/tailwindcss": "^6.12.2",
     "@vueuse/nuxt": "^12.0.0",
+    "jsfxr": "^1.2.2",
     "nuxt": "^3.14.1592",
     "vue": "latest",
     "vue-router": "latest",
